--- a/config.properties
+++ b/config.properties
@@ -18,6 +18,6 @@ query = select @@version;
 # [SSRF]
 SSRF = http://127.0.0.1:8080/
 # [dns address]
-dns = http://43.140.198.45:8777/p/a8813f/rDp1/
+dns = xxxx
 # [echo]: Exception OOB Tomcat Weblogic
 echo = OOB
